--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "videoconverter.js"]
 	path = videoconverter.js
-	url = git://github.com/bgrins/videoconverter.js.git
+	url = https://github.com/bgrins/videoconverter.js.git
